tests/step-ca/internal/resources/approver-policy.yaml
apiVersion: policy.cert-manager.io/v1alpha1
kind: CertificateRequestPolicy
metadata:
  name: step-ca-internal-test-x5c-cert-policy
spec:
  allowed:
    commonName:
      value: step-ca-x5c-test
    isCA: false
    usages:
      - digital signature
      - client auth
  selector:
    issuerRef:
      group: cert-manager.io
      kind: ClusterIssuer
      name: csi-driver-spiffe-ca
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: cert-manager-policy:step-ca-internal-test-x5c-cert
rules:
  - apiGroups: ["policy.cert-manager.io"]
    resources: ["certificaterequestpolicies"]
    verbs: ["use"]
    resourceNames: ["step-ca-internal-test-x5c-cert-policy"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: cert-manager-policy:step-ca-internal-test-x5c-cert
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: cert-manager-policy:step-ca-internal-test-x5c-cert
subjects:
  - kind: ServiceAccount
    name: cert-manager
    namespace: cert-manager
